--- a/css/style.css
+++ b/css/style.css
@@ -42,19 +42,26 @@ nav ul li a:hover{
 #groupImg{
     display: flex;
     justify-content: center;
+    width : 20rem;
+    margin: 0 auto;
+}
+
+#groupImg img{
+    width: 100%;
+
 }
 
 #infosGroup{
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
+    justify-content: space-between;
+    /*align-items: flex-start;*/
     flex-direction: row;
 }
 
 #discography{
     border: solid black 1px;
     border-radius: 3%;
-    height: 9rem;
+
     display: flex;
     flex-direction: column;
     padding-left: 1rem;
@@ -65,7 +72,7 @@ nav ul li a:hover{
 #membership{
     border: solid black 1px;
     border-radius: 3%;
-    height: 9rem;
+    width: 16rem;
     display: flex;
     flex-direction: column;
     padding-left: 1rem;
